repo-to-md/src/snapshots/review_to_md__tests__integration__comment_without_line_number.snap
---
source: repo-to-md/src/tests.rs
expression: "String::from_utf8(output).expect(\"utf8\")"
snapshot_kind: text
---
# Review comments

Please address the following review comments. The comments are given as inline
comments inside code blocks. They use the comment format of the language of the
commented file. Each comment is wrapped in "<review>" tags.

For example, a Rust file may look like:

```rust
fn main() {
    println!("13");
    // <review>
    // Please use 42 as the number
    // </review>
}
```

## `src/main.rs` - Lines 10-14

```rust
// <review>
// This entire section needs refactoring
// </review>
fn main() {
    setup();
    run();
    cleanup();
}
```
