repo-to-md/src/snapshots/review_to_md__tests__integration__multiline_comment.snap
---
source: repo-to-md/src/tests.rs
expression: "String::from_utf8(output).expect(\"utf8\")"
snapshot_kind: text
---
# Review comments

Please address the following review comments. The comments are given as inline
comments inside code blocks. They use the comment format of the language of the
commented file. Each comment is wrapped in "<review>" tags.

For example, a Rust file may look like:

```rust
fn main() {
    println!("13");
    // <review>
    // Please use 42 as the number
    // </review>
}
```

## `src/handler.rs` - Lines 22-26

```rust
fn handle_request(req: Request) -> Response {
    let data = parse(req);
    let result = process(data);
    // <review>
    // This function is doing too much.
    //
    // Consider splitting into:
    // 1. Validation logic
    // 2. Business logic
    // 3. Response formatting
    // </review>
    Ok(result)
}
```
